--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vuemassaging</title>
+    <title>Vue Massaging</title>
+    <style>
+      .pre-loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.8);
+        z-index: 999999;
+        content: '';
+        font-family: Tahoma, sans-serif !important;
+        font-size: 13px !important;
+        color: #444 !important;
+        -webkit-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+      .pre-loader.loaded {  opacity: 0;  visibility: hidden;  }
+      .pre-loader > div {
+        position: relative;
+        top: 50%;
+        text-align: center;
+      }
+      .pre-loader .pre-loader-progress {
+        width: 200px;
+        display: block;
+        height: 8px;
+        background-color: #cccccc;
+        margin: auto;
+        direction: ltr;
+      }
+      .pre-loader .pre-loader-progress::before {
+        display: block;
+        height: 100%;
+        background-color: #3a8ee6;
+        content: '';
+        -webkit-animation: pre-loader infinite 2s ease-in-out;
+        animation: pre-loader infinite 2s ease-in-out;
+      }
+      @-webkit-keyframes pre-loader {
+        0%{ width: 0 }
+        100%{ width: 100% }
+      }
+      @keyframes pre-loader {
+        0%{ width: 0 }
+        100%{ width: 100% }
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but vuemassaging doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div class="pre-loader">
+    <div>
+      <!--<img src="../src/assets/img/loading.gif">-->
+      <span class="pre-loader-progress"></span>
+      <p>لطفا تا بارگذاری کامل سایت صبر کنید</p>
+    </div>
+  </div>
+  <div id="app"></div>
+
+  <script>
+    window.onload = function() {
+      var preLoader = document.querySelector('.pre-loader');
+      var parent = preLoader.parentNode;
+      preLoader.className += ' loaded';
+      setTimeout(function () {
+        parent.removeChild(preLoader);
+      }, 500);
+    };
+  </script>
   </body>
 </html>
